# caresentinel

./: README.md  care_sentinel.ipynb  pyproject.toml
.gradio/flagged/: dataset1.csv
caresentinel/: app.py
data/pipelines/: complete_binary_pipeline.jdp
