[project]
name = "caresentinel"
version = "0.1.0"
description = ""
authors = [
    {name = "mpotrel",email = "manu.potrel@protonmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ucimlrepo (>=0.0.7,<0.0.8)",
    "numpy (>=2.2.3,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "torch (>=2.6.0,<3.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "gradio (>=5.20.0,<6.0.0)",
    "joblib (>=1.4.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
